# pigweed-starter

./: .gitignore  .gitmodules  .gn  BUILD.gn  BUILDCONFIG.gn  README.md  activate.sh  bootstrap.sh
app/: BUILD.gn  app.cc  app_test.cc
targets/host/: BUILD.gn  host_common.gni  linux.gni  run_test  target_docs.rst
