import("$dir_pigweed/pw_vars_default.gni")

declare_args() {
  pw_build_host_tools = false
}

# Use logging-based test output on host.
pw_unit_test_main = "$dir_pw_unit_test:logging_main"

# Configure backend for assert facade.
dir_pw_assert_backend = "$dir_pw_assert_basic"

# Configure backend for logging facade.
dir_pw_log_backend = "$dir_pw_log_basic"

# Configure backend for pw_sys_io facade.
dir_pw_sys_io_backend = "$dir_pw_sys_io_stdio"
