
import("host_common.gni")

declare_args() {
  # Specifies the toolchain to use for this build.
  pw_target_toolchain = "$dir_pw_toolchain:host_gcc_og"
}

pw_executable_config.bloaty_config_file =
    get_path_info("linux.bloaty", "abspath")

pw_automatic_test_runner = get_path_info("run_test", "abspath")
